# faust-window-test

./: README.md  environment.yml  pyproject.toml
app/: app.py
tests/: conftest.py  window_test.py
